--- a/DockerLibr.csproj
+++ b/DockerLibr.csproj
@@ -12,10 +12,14 @@ Doc at : https://github.com/guihen01/DockerLibr</Description>
     <RepositoryType>git</RepositoryType>
     <PackageProjectUrl>https://github.com/guihen01/DockerLibr</PackageProjectUrl>
     <RepositoryUrl>https://github.com/guihen01/DockerLibr</RepositoryUrl>
-    <PackageReleaseNotes>Method DockerPullCount()  : Returns the number of pulls on a given Docker repository</PackageReleaseNotes>
+    <PackageReleaseNotes>new methods added :  DockerREpInfos() : Returns the details informations on a given Docker repository
+DockerWrToTxt : Write informations obtained from Docker Hub to a file (format txt)
+DockerWrToJson : Write informations obtained from Docker Hub to a file (format json)
+GetHttpRep :</PackageReleaseNotes>
     <PackageId>DockerLibr</PackageId>
     <Product>DockerLib</Product>
     <PackageIcon>Henri Guillot.png</PackageIcon>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
