--- a/DockerLibr.csproj
+++ b/DockerLibr.csproj
@@ -5,20 +5,20 @@
     <TargetFramework>netcoreapp5.0</TargetFramework>
     <Authors>Henri Guillot</Authors>
     <Company>Henri Guillot</Company>
-    <Description>Library of methods working on Docker Hub . Methods get and parse Docker containers &amp; images in Docker Hub repository
+    <Description>Library of methods working on Docker Hub . Methods get and parse Docker containers &amp; images in Docker Hub repository or on local or remote host server or computers.
 Doc at : https://github.com/guihen01/DockerLibr</Description>
     <Copyright>Henri Guillot</Copyright>
     <PackageTags>Docker Pull Tag images</PackageTags>
     <RepositoryType>git</RepositoryType>
     <PackageProjectUrl>https://github.com/guihen01/DockerLibr</PackageProjectUrl>
     <RepositoryUrl>https://github.com/guihen01/DockerLibr</RepositoryUrl>
-    <PackageReleaseNotes>new methods added :
- DockGetTagsOb &amp; DockGetTags   Retruns all tags or specific tag of a Docker Hub repository  ( results as  json string
-DockContList : List all containers in a local or remote host server</PackageReleaseNotes>
+    <PackageReleaseNotes>new methods added : 
+DockContPaused : List all paused containers  
+DockContRunning : List all containers running   port TCP 2375 must be reachable</PackageReleaseNotes>
     <PackageId>DockerLibr</PackageId>
     <Product>DockerLib</Product>
     <PackageIcon>Logo 3 Docker.PNG</PackageIcon>
-    <Version>1.0.4</Version>
+    <Version>1.2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
